tests/base/parser/bad/stmts_t-match-spid-with-bar-cid-map.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

transition arbitrary ()
  match a with
  | Pair Map -> accept
  end
end  
